fixed books alignment

--- a/index.css
+++ b/index.css
@@ -8,8 +8,10 @@ html{
 body{
   /* border-radius: 10px;
   background-color: rgba(41, 34, 34, 0.444); */
-  display: flex;
-  margin: 100px;
+  display:flex; 
+  flex-direction:row; 
+  justify-content:center;
+  min-height:100vh;
   padding:20px;
   text-align: start;
   align-items: center;
@@ -20,6 +22,8 @@ body{
   border-radius: 10px;
   background-color: rgba(245, 245, 245, 0.534);
   padding:20px;
+  min-width: 200px;
+  width: 25%;
 }
 
 .books {
